# Sawubona

./: .gitignore  CLAUDE.md  HANDOFF.md  pyproject.toml  readme.md
config/: afrobarometer_recode.yaml  afrobench_tasks.yaml  answer_lexicon.yaml  items_political.yaml  languages.yaml  models.yaml
config/translations/: _template.yaml  eng.yaml
data/: README.md
scripts/: 00_download_data.sh  01_pull_models.sh  02_run_survey.py  03_run_capability.py  04_compute_divergence.py  05_correlate_and_plot.py  validate_microdata.py
src/decol/: __init__.py  config.py  dist.py  manifest.py
src/decol/analysis/: __init__.py  correlate.py  figures.py
src/decol/capability/: __init__.py  afrobench.py  extend.py
src/decol/data/: __init__.py  afrobarometer.py  baselines.py  sasas.py
src/decol/divergence/: __init__.py  compare.py  metrics.py
src/decol/elicit/: __init__.py  ollama_client.py  parse.py  prompts.py  runner.py  simulate.py
tests/: test_analysis.py  test_compare.py  test_config.py  test_dist.py  test_metrics.py  test_parse.py  test_prompts_runner.py
